syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package accountcat.accounting;

message NewItem {
  string name = 1;
  string income = 2;
  string expense = 3;
}

message Item {
  string id = 1;
  string name = 2;
  string income = 3;
  string expense = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ItemList {
  repeated Item items = 1;
}

service Accounting {
  rpc List(google.protobuf.Empty) returns (ItemList) {}
  rpc Add(NewItem) returns (Item) {}
}
